added animation for header

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="format-detection" content="telephone=no" />
     <link rel="stylesheet" href="styles/style.css" />
-    <link rel="stylesheet" href="styles/common.css">
+    <link rel="stylesheet" href="styles/common.css" />
     <title>Bitosite</title>
   </head>
   <body>
@@ -711,5 +711,10 @@
         </div>
       </div>
     </footer>
+    <script
+      defer
+      src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"
+    ></script>
+    <script defer src="scripts/headerHandler.js"></script>
   </body>
 </html>
