--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="format-detection" content="telephone=no" />
-    <link rel="stylesheet" href="styles/style.css" />
     <link rel="stylesheet" href="styles/common.css" />
+    <link rel="stylesheet" href="styles/style.css" />
     <title>Bitosite</title>
   </head>
   <body>
@@ -85,9 +85,7 @@
         <span class="promo__tagline"
           >Абсолютно бесплатно, не выходя из дома, за 10 минут</span
         >
-        <button class="button button-promo" data-scroll="process">
-          Начать
-        </button>
+        <button class="button button-promo" data-scroll="process">Начать</button>
       </div>
     </section>
     <section class="section process">
