added styles for process section

--- a/index.html
+++ b/index.html
@@ -81,16 +81,18 @@
     </header>
     <section class="section promo">
       <div class="section__container">
-        <h1 class="promo__heading">Зарегистрируйте свой бизнес</h1>
+        <h1 class="promo__heading heading">Зарегистрируйте свой бизнес</h1>
         <span class="promo__tagline"
           >Абсолютно бесплатно, не выходя из дома, за 10 минут</span
         >
-        <button class="button button-promo" data-scroll="process">Начать</button>
+        <button class="button button-promo" data-scroll="process">
+          Начать
+        </button>
       </div>
     </section>
     <section class="section process">
       <div class="section__container">
-        <h2 class="process__heading">Как зарегистрировать бизнес?</h2>
+        <h2 class="process__heading heading">Как зарегистрировать бизнес?</h2>
         <div class="process__scheme">
           <div class="process__step">
             <div class="process__step-number">1</div>
@@ -132,7 +134,7 @@
     </section>
     <section class="section benefits">
       <div class="section__container">
-        <h2 class="benefits__heading">
+        <h2 class="benefits__heading heading">
           Почему стоит воспользоваться нашим сервисом?
         </h2>
         <div class="benefits__cards">
@@ -207,7 +209,7 @@
     </section>
     <section class="section partners">
       <div class="section__container">
-        <h2 class="partners__heading">Наши партнеры</h2>
+        <h2 class="partners__heading heading">Наши партнеры</h2>
         <div class="partners__container">
           <svg
             width="212"
@@ -568,7 +570,7 @@
     </section>
     <section class="section ownership">
       <div class="section__container">
-        <h2 class="ownership__heading">Выберите форму собственности</h2>
+        <h2 class="ownership__heading heading">Выберите форму собственности</h2>
         <div class="ownership__table">
           <div class="ownership__legend">
             <div class="ownership__legend-item">Кол-во учредителей</div>
@@ -651,7 +653,7 @@
             <div class="ownership__option-container">
               <div class="ownership__option">
                 <h3 class="ownership__option-heading">ЧУП</h3>
-                <div class="ownership__option-featureset">
+                <div class="ownership__option-features">
                   <div class="ownership__option-feature">1</div>
                   <div class="ownership__option-feature">
                     По юридическому адресу
@@ -694,16 +696,10 @@
           </span>
         </div>
         <div class="footer__navigation">
-          <a
-            class="footer__navigation-link"
-            href="/agreements/cp"
-            target="_blank"
+          <a class="footer__navigation-link" href="#" target="_blank"
             >Политика конфиденциальности</a
           >
-          <a
-            class="footer__navigation-link"
-            href="/agreements/eula"
-            target="_blank"
+          <a class="footer__navigation-link" href="#" target="_blank"
             >Пользовательское соглашение</a
           >
         </div>
