added styles for ownership section

--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
                     </div>
                   </div>
                 </div>
-                <a class="ownership__option-button" href="#">Открыть ООО</a>
+                <a class="ownership__option-button button" href="#">Открыть ООО</a>
               </div>
             </div>
             <div class="ownership__option-container">
@@ -647,7 +647,7 @@
                     </div>
                   </div>
                 </div>
-                <a class="ownership__option-button" href="#">Открыть ИП</a>
+                <a class="ownership__option-button button" href="#">Открыть ИП</a>
               </div>
             </div>
             <div class="ownership__option-container">
@@ -678,7 +678,7 @@
                     </div>
                   </div>
                 </div>
-                <a class="ownership__option-button" href="#">Открыть ЧУП</a>
+                <a class="ownership__option-button button" href="#">Открыть ЧУП</a>
               </div>
             </div>
           </div>
