added link to login form

--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
           <a class="header__menu-item" data-scroll="ownership"
             >Открыть ИП/ООО/ЧУП</a
           >
-          <a class="header__menu-item" href="#">Согласовать название ООО/ЧУП</a>
-          <a class="header__menu-item" href="#">Арендовать юр. адрес</a>
-          <a class="header__menu-item" href="#">Открыть счет</a>
-          <a class="header__menu-item" href="#">Вопросы/ответы</a>
+          <a class="header__menu-item" href="http://lexpart.by/skyforce/">Согласовать название ООО/ЧУП</a>
+          <a class="header__menu-item" href="http://lexpart.by/skyforce/">Арендовать юр. адрес</a>
+          <a class="header__menu-item" href="http://lexpart.by/skyforce/">Открыть счет</a>
+          <a class="header__menu-item" href="http://lexpart.by/skyforce/">Вопросы/ответы</a>
         </nav>
         <div class="header__toggle">
           <span></span>
@@ -610,7 +610,9 @@
                     </div>
                   </div>
                 </div>
-                <a class="ownership__option-button button" href="#">Открыть ООО</a>
+                <a class="ownership__option-button button" href="#"
+                  >Открыть ООО</a
+                >
               </div>
             </div>
             <div class="ownership__option-container">
@@ -647,7 +649,9 @@
                     </div>
                   </div>
                 </div>
-                <a class="ownership__option-button button" href="#">Открыть ИП</a>
+                <a class="ownership__option-button button" href="#"
+                  >Открыть ИП</a
+                >
               </div>
             </div>
             <div class="ownership__option-container">
@@ -678,7 +682,9 @@
                     </div>
                   </div>
                 </div>
-                <a class="ownership__option-button button" href="#">Открыть ЧУП</a>
+                <a class="ownership__option-button button" href="#"
+                  >Открыть ЧУП</a
+                >
               </div>
             </div>
           </div>
